# emoj_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: ci.yml  release.yml
src/: main.rs  search.rs
