[package]
name = "rust-emoj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "emojrs"
path = "src/main.rs"

[dependencies]
arboard = "2.1.0"
clap = "3.1.6"
regex = "1.5.5"
serde_json = "1.0.79"
tuikit = "0.4.5"
